fix display issue on safari

--- a/src/components/dialog/style/index.less
+++ b/src/components/dialog/style/index.less
@@ -81,7 +81,6 @@
 	}
 
 	&-body {
-		flex: 1;
 		display: block;
 		overflow-y: auto;
 		overscroll-behavior: contain;
